[gd_scene load_steps=2 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.34902 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -63.0
margin_right = 95.5
margin_bottom = 63.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_right = 171.0
margin_bottom = 70.0

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/CenterContainer"]
margin_left = 9.0
margin_right = 161.0
margin_bottom = 70.0
columns = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "Seed"

[node name="SeedInput" type="SpinBox" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 24.0

[node name="Label2" type="Label" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 28.0
margin_right = 74.0
margin_bottom = 42.0
text = "Coord X"

[node name="Label3" type="Label" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 78.0
margin_top = 28.0
margin_right = 152.0
margin_bottom = 42.0
text = "Coord Y"

[node name="CoordXInput" type="SpinBox" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 46.0
margin_right = 74.0
margin_bottom = 70.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="CoordYInput" type="SpinBox" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 78.0
margin_top = 46.0
margin_right = 152.0
margin_bottom = 70.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_top = 74.0
margin_right = 171.0
margin_bottom = 94.0
text = "Apply"

[connection signal="gui_input" from="Background" to="." method="_on_Background_gui_input"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
